force-app/main/default/objects/Work_Line_Rate__mdt/Work_Line_Rate__mdt.object-meta.xml
<CustomObject>
    <label>Work Line Rate</label>
    <pluralLabel>Work Line Rates</pluralLabel>
</CustomObject>