force-app/main/default/objects/Work_Line_Rate__mdt/fields/Minutes_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Per_Unit__c</fullName>
    <label>Minutes Per Unit</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>