force-app/main/default/objects/Work_Line_Rate__mdt/fields/Unit_Label__c.field-meta.xml
<CustomField>
    <fullName>Unit_Label__c</fullName>
    <label>Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>